Rework backup controller, service and tests